# substrate-telemetry

./: .gitignore
backend/: Cargo.toml
backend/telemetry_observer/: Cargo.toml  README.md
backend/telemetry_observer/src/: main.rs
debug/: res-likely-authors.csv  telemetry-blocks.json  telemetry-nodes.json
script/: telemetry-observer.sh
