[workspace]
resolver = "2"
members = [
    "common",
    "telemetry_core",
    "telemetry_shard",
    "telemetry_observer",
    "test_utils",
]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
## Enabling these seems necessary to get
## good debug info in Instruments:
# debug = true
# codegen-units = 1
