[package]
name = "telemetry_observer"
version = "0.1.0"
authors = ["Parity Technologies Ltd. <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
common = { path = "../common" }
csv = "1.3"
futures = "0.3"
http = "0.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "telemetry-observer"
path = "src/main.rs"
